--- a/tql_gui/index.html
+++ b/tql_gui/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/src/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri App</title>
+    <title>TQ Launcher</title>
     <script type="module" src="/src/main.ts" defer></script>
 </head>
 
@@ -14,8 +14,8 @@
         <h1>TerraQuest Launcher</h1>
 
         <form class="row" id="greet-form">
-            <input id="greet-input" placeholder="Package Version" />
-            <button type="submit">Greet</button>
+            <input id="greet-input" placeholder="New Instance Name" />
+            <button type="submit">Create</button>
         </form>
 
         <p id="greet-msg"></p>
