add version dropdown

--- a/tql_gui/index.html
+++ b/tql_gui/index.html
@@ -13,12 +13,15 @@
     <div class="container">
         <h1>TerraQuest Launcher</h1>
 
-        <form class="row" id="greet-form">
-            <input id="greet-input" placeholder="New Instance Name" />
+        <form class="row" id="newinst-form">
+            <input id="newinst-name" placeholder="Instance Name" />
+            <select id="newinst-ver" name="newinst-ver">
+                <option value="test1">1.11.1</option>
+                <option value="test2">2.22.2</option>
+            </select>
+
             <button type="submit">Create</button>
         </form>
-
-        <p id="greet-msg"></p>
     </div>
 </body>
 
