populate version choices

--- a/tql_gui/index.html
+++ b/tql_gui/index.html
@@ -15,10 +15,7 @@
 
         <form class="row" id="newinst-form">
             <input id="newinst-name" placeholder="Instance Name" />
-            <select id="newinst-ver" name="newinst-ver">
-                <option value="test1">1.11.1</option>
-                <option value="test2">2.22.2</option>
-            </select>
+            <select id="newinst-ver" name="newinst-ver"></select>
 
             <button type="submit">Create</button>
         </form>
