--- a/tql_gui/index.html
+++ b/tql_gui/index.html
@@ -20,6 +20,18 @@
             <button type="submit">Create</button>
         </form>
     </div>
+
+    <div class="container">
+        <div id="instances"></div>
+    </div>
+
+    <template id="instance-template">
+        <div class="instance-box">
+            <h2 class="instance-name"></h2>
+            <button class="btn-play">Play</button>
+            <button class="btn-edit">Edit</button>
+        </div>
+    </template>
 </body>
 
 </html>
