add bottom panel

--- a/tql_gui/index.html
+++ b/tql_gui/index.html
@@ -25,13 +25,21 @@
         <div id="instances"></div>
     </div>
 
-    <template id="instance-template">
-        <div class="instance-box">
-            <h2 class="instance-name"></h2>
-            <button class="btn-play">Play</button>
-            <button class="btn-edit">Edit</button>
+    <div class="container">
+        <div id="edit-panel">
+            <h2>Edit Instance</h2>
+            <p>(none selected)</p>
+            <!---->
         </div>
-    </template>
+    </div>
 </body>
+
+<template id="instance-template">
+    <div class="instance-box">
+        <h2 class="instance-name"></h2>
+        <button class="btn-play">Play</button>
+        <button class="btn-edit">Edit</button>
+    </div>
+</template>
 
 </html>
