--- a/tql_gui/index.html
+++ b/tql_gui/index.html
@@ -22,11 +22,8 @@
     </div>
 
     <div class="container">
-        <div id="instances"></div>
-    </div>
-
-    <div class="container">
-        <div id="edit-panel">
+        <div id="instances" class="row"></div>
+        <div id="cpanel" class="row">
             <h2>Edit Instance</h2>
             <p>(none selected)</p>
             <!---->
