"no instances" box message

--- a/tql_gui/index.html
+++ b/tql_gui/index.html
@@ -39,4 +39,10 @@
     </div>
 </template>
 
+<template id="instance-template-none">
+    <div class="instance-box">
+        <h2 class="instance-name">No Instances Yet!</h2>
+    </div>
+</template>
+
 </html>
