add github/discord links

--- a/tql_gui/index.html
+++ b/tql_gui/index.html
@@ -10,9 +10,17 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="row">
+        <a href="https://github.com/MaxineHelsel/TerraQuest" target="_blank" style="margin: auto 1em">
+            <img src="/src/assets/github.png" width="30" alt="GitHub" />
+        </a>
         <h1>TerraQuest Launcher</h1>
+        <a href="https://discord.gg/hF3mxYYST2" target="_blank" style="margin: auto 1em">
+            <img src="/src/assets/discord.png" width="30" alt="Discord" />
+        </a>
+    </div>
 
+    <div class="container" style="margin-top: 0; padding-top: 0">
         <form class="row" id="newinst-form">
             <input id="newinst-name" placeholder="Instance Name" />
             <select id="newinst-ver" name="newinst-ver"></select>
