shows instance versions under name

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <template id="instance-template">
     <div class="instance-box">
         <h2 class="instance-name"></h2>
+        <h3 class="instance-ver"></h3>
         <button class="btn-play">Play</button>
         <button class="btn-edit">Edit</button>
     </div>
