added delete button

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <div id="cpanel" class="row fancy-bg bottom-panel">
         <h2>Edit Instance</h2>
         <h3 id="editing-inst-name"></h3>
+        <button id="btn-delete" class="fancy-bg">Delete</button>
     </div>
 </template>
 
