--- a/index.html
+++ b/index.html
@@ -61,4 +61,13 @@
     </div>
 </template>
 
+<template>
+    <div class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Words</p>
+        </div>
+    </div>
+</template>
+
 </html>
