add `cloneTemplate` function

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </template>
 
 <template>
-    <div class="modal">
+    <div class="modal-bg">
         <div class="modal-content">
             <span class="close">&times;</span>
             <p>Words</p>
