button spawns modal (not actually visible fsr)

--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@
     </div>
 </template>
 
-<template>
-    <div class="modal-bg">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Words</p>
+<template id="modal-template">
+    <div id="modal-bg">
+        <div id="modal-content">
+            <span id="modal-close">&times;</span>
+            <h1 id="modal-title">Title</h1>
+            <p id="modal-text">Text</p>
+
+            <div id="modal-buttons"></div>
         </div>
     </div>
 </template>
