change `-template` ids to `tmp`

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 </body>
 
-<template id="cpanel-template">
+<template id="cpanel-tmp">
     <div id="cpanel" class="row fancy-bg bottom-panel">
         <h2>Edit Instance</h2>
         <h3 id="editing-inst-name"></h3>
@@ -46,7 +46,7 @@
     </div>
 </template>
 
-<template id="instance-template">
+<template id="instance-tmp">
     <div class="instance-box fancy-bg">
         <h2 class="instance-name"></h2>
         <h3 class="instance-ver"></h3>
@@ -55,13 +55,13 @@
     </div>
 </template>
 
-<template id="instance-template-none">
+<template id="instance-tmp-none">
     <div class="instance-box fancy-bg">
         <h2 class="instance-name">No Instances Yet!</h2>
     </div>
 </template>
 
-<template id="modal-template">
+<template id="modal-tmp">
     <div id="modal-bg">
         <div id="modal-content">
             <h1 id="modal-title">Title</h1>
