--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 
 <template id="cpanel-tmp">
     <div id="cpanel" class="row fancy-bg bottom-panel">
-        <h2>Edit Instance</h2>
+        <div id="edit-instance-titlebar" class="row">
+            <span></span>
+            <h2>Edit Instance</h2>
+            <span id="cpanel-x-btn" class="noselect x-btn">&times;</span>
+        </div>
         <h3 id="editing-inst-name"></h3>
         <button id="btn-delete" class="fancy-bg">Delete</button>
     </div>
