move "editing instance:" part into edit title bar

--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
 <template id="cpanel-tmp">
     <div id="cpanel" class="row fancy-bg bottom-panel">
         <div id="edit-instance-titlebar" class="row">
-            <span></span>
+            <span>
+                <h2 id="editing-inst-name"></h2>
+            </span>
             <h2>Edit Instance</h2>
             <span id="cpanel-x-btn" class="noselect x-btn">&times;</span>
         </div>
-        <h3 id="editing-inst-name"></h3>
         <button id="btn-delete" class="fancy-bg">Delete</button>
     </div>
 </template>
