add "show edge" checkbox

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
             <button type="submit" class="fancy-bg">Create</button>
         </form>
+        <div id="edge-filter-div" class="row">
+            <label for="edge-filter-check">Show Edge</label>
+            <input type="checkbox" id="edge-filter-check" class="fancy-bg" />
+        </div>
     </div>
 
     <div class="container">
