--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" style="padding-top: 0">
         <div id="instances" class="row"></div>
         <div id="tq-news" class="row fancy-bg bottom-panel">
             <h2>TerraQuest News</h2>
