make tab list switch tabs

--- a/index.html
+++ b/index.html
@@ -36,22 +36,20 @@
     <div id="instances" class="row"></div>
 
     <div id="bottom-panel" class="container row fancy-bg" style="padding-top: 0">
-        <div id="panel-tabs" class="row">
-            <button id="btn-news-tab" class="fancy-bg tab-btn tab-btn-selected">
-                News
-            </button>
+        <div id="tab-buttons" class="row">
+            <button id="btn-news-tab" class="fancy-bg tab-btn">News</button>
             <button id="btn-settings-tab" class="fancy-bg tab-btn">Settings</button>
             <button id="btn-edit-tab" class="fancy-bg tab-btn" style="display: none">
                 Edit
             </button>
         </div>
 
-        <div id="tq-news">
+        <div id="news-tab" class="tab">
             <h2>TerraQuest News</h2>
             <h3>News goes here</h3>
         </div>
 
-        <div id="cpanel" style="display: none">
+        <div id="edit-tab" class="tab">
             <div id="edit-instance-titlebar" class="row">
                 <span>
                     <h2 id="editing-inst-name"></h2>
