editing tab works

--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
 
         <div id="edit-tab" class="tab">
             <div id="edit-instance-titlebar" class="row">
-                <span>
-                    <h2 id="editing-inst-name"></h2>
-                </span>
-                <h2>Edit Instance</h2>
-                <span id="cpanel-x-btn" class="noselect x-btn">&times;</span>
+                <h2>Editing "<span id="editing-inst-name"></span>"...</h2>
             </div>
             <button id="btn-delete" class="fancy-bg">Delete</button>
         </div>
