add settings tab

--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
             <h3>News goes here</h3>
         </div>
 
+        <div id="settings-tab" class="tab">
+            <h2>Settings</h2>
+            <form id="settings-form">
+                <label for="settings-flags">Boot Flags: </label>
+                <input type="text" id="settings-flags" class="fancy-bg" />
+                <br />
+                <button type="submit" class="fancy-bg">Save</button>
+            </form>
+        </div>
+
         <div id="edit-tab" class="tab">
             <div id="edit-instance-titlebar" class="row">
                 <h2>Editing "<span id="editing-inst-name"></span>"...</h2>
