add `alter_instance` tauri command

--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
             <div id="edit-instance-titlebar" class="row">
                 <h2>Editing "<span id="editing-inst-name"></span>"...</h2>
             </div>
-            <button id="btn-delete" class="fancy-bg">Delete</button>
+
+            <form id="edit-instance-form">
+                <input id="edit-inst-flags" class="fancy-bg" placeholder="Flags" />
+                <br />
+                <button id="btn-delete" class="fancy-bg">Delete</button>
+                <button type="submit" class="btn-save fancy-bg">Save</button>
+            </form>
         </div>
     </div>
 </body>
