clarify settings tab content

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         </div>
 
         <div id="settings-tab" class="tab">
-            <h2>Settings</h2>
+            <h2>Launcher Settings</h2>
             <form id="settings-form">
-                <label for="settings-flags">Boot Flags: </label>
+                <label for="settings-flags">Global Default Flags: </label>
                 <input type="text" id="settings-flags" class="fancy-bg" />
                 <br />
                 <button type="submit" class="fancy-bg">Save</button>
